Bug 908300 - Truncate headers solution

--- a/apps/communications/contacts/style/contacts.css
+++ b/apps/communications/contacts/style/contacts.css
@@ -29,7 +29,7 @@ section[role="region"] > header:first-child .icon.icon-edit-contact {
 }
 
 #contact-name-title {
-  max-width: 22rem;
+  width: 22rem;
   float: left;
 }
 
